--- a/MuNu/Base.lproj/Main.storyboard
+++ b/MuNu/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,50 +25,60 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IKS-Uc-dnK">
-                                <rect key="frame" x="24" y="28" width="90" height="30"/>
-                                <color key="backgroundColor" red="0.82352941180000006" green="0.82352941180000006" blue="0.82352941180000006" alpha="0.5572198276" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="0.0" y="20" width="120" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="90" id="1Hr-uA-8sc"/>
+                                    <constraint firstAttribute="width" constant="120" id="GIS-Bx-8VH"/>
+                                    <constraint firstAttribute="height" constant="50" id="NUc-Kt-F46"/>
                                 </constraints>
-                                <state key="normal" title="Save Image"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Save One">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="saveButtonTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8D5-Pt-FTj"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Frequency in seconds" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N2C-fn-RWl">
-                                <rect key="frame" x="24" y="66" width="160" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="160" id="Sv1-qW-hML"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7bF-fY-Bts">
-                                <rect key="frame" x="24" y="104" width="120" height="30"/>
-                                <color key="backgroundColor" red="0.82352941180000006" green="0.82352941180000006" blue="0.82352941180000006" alpha="0.56000000000000005" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="255" y="20" width="120" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="IXx-jJ-3kO"/>
+                                    <constraint firstAttribute="height" constant="50" id="HMa-sM-Ilf"/>
+                                    <constraint firstAttribute="width" constant="120" id="LGd-Bn-2cY"/>
                                 </constraints>
-                                <state key="normal" title="Start Capturing"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Save Stream">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="startButtonTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sMq-1O-eiU"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="Frequency" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N2C-fn-RWl">
+                                <rect key="frame" x="120" y="20" width="135" height="50"/>
+                                <color key="backgroundColor" red="0.34715544871794879" green="0.34715544871794879" blue="0.34715544871794879" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="woi-q0-6r7"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="7bF-fY-Bts" firstAttribute="top" secondItem="N2C-fn-RWl" secondAttribute="bottom" constant="8" id="1ZW-DT-ddh"/>
+                            <constraint firstItem="7bF-fY-Bts" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3fc-hw-iXD"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mub-In-I6t" secondAttribute="bottom" id="74I-Hu-iNv"/>
                             <constraint firstItem="mub-In-I6t" firstAttribute="centerX" secondItem="suR-3N-B72" secondAttribute="centerX" id="AFh-Ne-4DC"/>
-                            <constraint firstItem="N2C-fn-RWl" firstAttribute="top" secondItem="IKS-Uc-dnK" secondAttribute="bottom" constant="8" id="FYD-Yh-VlE"/>
+                            <constraint firstItem="N2C-fn-RWl" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ArP-ks-EDe"/>
+                            <constraint firstItem="N2C-fn-RWl" firstAttribute="leading" secondItem="IKS-Uc-dnK" secondAttribute="trailing" id="OH3-We-hfV"/>
                             <constraint firstAttribute="trailing" secondItem="mub-In-I6t" secondAttribute="trailing" id="RMW-D1-zbt"/>
                             <constraint firstItem="mub-In-I6t" firstAttribute="leading" secondItem="suR-3N-B72" secondAttribute="leading" id="bxx-Jk-iSt"/>
-                            <constraint firstItem="7bF-fY-Bts" firstAttribute="leading" secondItem="suR-3N-B72" secondAttribute="leadingMargin" constant="8" id="fHQ-4L-H3T"/>
-                            <constraint firstItem="IKS-Uc-dnK" firstAttribute="leading" secondItem="suR-3N-B72" secondAttribute="leadingMargin" constant="8" id="fby-bW-edN"/>
-                            <constraint firstItem="N2C-fn-RWl" firstAttribute="leading" secondItem="suR-3N-B72" secondAttribute="leadingMargin" constant="8" id="gte-CG-ois"/>
-                            <constraint firstItem="IKS-Uc-dnK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="i0m-NJ-rNK"/>
+                            <constraint firstItem="IKS-Uc-dnK" firstAttribute="leading" secondItem="suR-3N-B72" secondAttribute="leading" id="fam-fU-fpC"/>
+                            <constraint firstAttribute="trailing" secondItem="7bF-fY-Bts" secondAttribute="trailing" id="gbE-xS-eob"/>
+                            <constraint firstItem="IKS-Uc-dnK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="i0m-NJ-rNK"/>
                             <constraint firstItem="mub-In-I6t" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="kiE-L6-zeg"/>
+                            <constraint firstItem="7bF-fY-Bts" firstAttribute="leading" secondItem="N2C-fn-RWl" secondAttribute="trailing" id="mnh-pv-BBt"/>
                         </constraints>
                     </view>
                     <connections>
@@ -81,6 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
 </document>
